# Scanner

./: Language Specification.docx  README.md  Scanner Documentation.docx
scanner/: CMakeLists.txt  main.cpp  src.txt
